--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<h3>Simple- and Elegant</h3>
-						<h1>Subhan Ali</h1>
+						<h3>My name is </h3>
+						<h1>SUBHAN ALI</h1>
 						<h2 class="rotate">Fronted developer , C++ Programmer, UI &AMP; DSA SPECIALIST, Marketing Expert</h2>
 						<p>"Passionate Frontend Developer | Crafting Engaging User Experiences | Transforming Designs into Seamless Code"  Feel free to modify it according to your specific skills and expertise.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
@@ -105,7 +105,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
-						<h2>ABOUT Subhan</h2>
+						<h2>About Subhan Ali</h2>
 						<h4>Frontend &AMP; DEVELOPER</h4>
 						<p>"Passionate Frontend Developer | Crafting Engaging User Experiences | Transforming Designs into Seamless Code"  Feel free to modify it according to your specific skills and expertise.</p>
 						<p>I have maximum knowledge of C++ | OOP | DSA which i study in my degree as well as i am Fronted developer Html CSS & basics of javascript including frameworks</p>
