--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<h3>My name is </h3>
+						<h3>My Name is </h3>
 						<h1>SUBHAN ALI</h1>
-						<h2 class="rotate">Fronted developer , C++ Programmer, UI &AMP; DSA SPECIALIST, Marketing Expert</h2>
+						<h2 class="rotate">Fronted developer , C++ Programmer, OOP & DSA SPECIALIST,Social Media Marketer</h2>
 						<p>"Passionate Frontend Developer | Crafting Engaging User Experiences | Transforming Designs into Seamless Code"  Feel free to modify it according to your specific skills and expertise.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
